opprettet notebooks med links

--- a/proj_environment-main/notebooks/del1.ipynb
+++ b/proj_environment-main/notebooks/del1.ipynb
@@ -5,7 +5,9 @@
    "id": "25f3e1f3",
    "metadata": {},
    "source": [
-    "## Prosjekt del 1\n",
+    "Oppgaver: Oversikt\n",
+    "I dette prosjektet skal dere gjennomføre oppgaver som fokuserer på oppsett av utviklingsmiljø, innsamling, behandling, analyse, visualisering og prediktiv analyse av miljødata. Oppgave 1 handler om å sette opp et fungerende utviklingsmiljø. Oppgave 2 innebærer å identifisere relevante åpne datakilder og implementere funksjonalitet for å hente data fra disse kildene ved hjelp av Python. I oppgave 3 skal dere utvikle funksjoner for å rense og formatere de innsamlede dataene, med fokus på håndtering av manglende verdier.\n",
+    "\n",
     "### Oppgave 1: Sett opp utviklingsmiljø\n",
     "Før dere begynner med datainnsamlingen, er det viktig å sette opp et utviklingsmiljø som vil støtte dere gjennom hele prosjektet. Denne oppgaven vil veilede dere i å opprette et prosjekt i GitHub, installere nødvendige verktøy og opprette en test Jupyter Notebook for å sikre at alt fungerer som det skal.\n",
     "\n",
@@ -18,7 +20,38 @@
     "Klon dette repoet til din lokale maskin ved hjelp av Git (eller utviklingsverktøyet ditt).\n",
     "\n",
     "I VSCode, opprett en ny Jupyter Notebook-fil (med filendelsen «.ipynb») i prosjektmappen. Skriv og kjør følgende kode i den første cellen for å teste at miljøet fungerer som det skal:\n",
-    "\n"
+    "\n",
+    "Oppgave 2: Datainnsamling\n",
+    "I prosjektet for utvikling av en miljødataanalyseapplikasjon skal dere først identifisere relevante åpne datakilder, som f.eks. API-er fra meteorologiske institutter og miljøovervåkingsorganisasjoner. Deretter skal dere implementere funksjonalitet for å hente data fra disse kildene ved hjelp av Python-moduler (som eks. requests). For å integrere dataene i applikasjonen, bruker dere teknikker som håndtering av tekstfiler, CSV-filer, JSON-data, samt fil- og katalogadministrasjon. I tillegg skal dere benytte dere av list comprehensions, iteratorer og Pandas SQL (sqldf) for å utforske og forstå dataenes struktur og innhold før de forberedes for videre analyse.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Hvilke åpne datakilder er identifisert som relevante for miljødata, og hva er kriteriene (f.eks. kildeautoritet, datakvalitet, tilgjengelighet, brukervennlighet osv.) for å vurdere deres pålitelighet og kvalitet?\n",
+    "\n",
+    "Hvilke teknikker (f.eks. håndtering av CSV-filer, JSON-data) er valgt å bruke for å lese inn dataene, og hvordan påvirker disse valgene datakvaliteten og prosessen videre?\n",
+    "\n",
+    "Dersom det er brukt API-er, hvilke spesifikke API-er er valgt å bruke, og hva er de viktigste dataene som kan hentes fra disse kildene?\n",
+    "\n",
+    "Oppgave 3: Databehandling\n",
+    "Her skal dere fokusere på databehandling ved å utvikle funksjoner som renser og formaterer de innsamlede dataene, med særlig vekt på håndtering av manglende verdier og uregelmessigheter ved hjelp av Pandas. I tillegg skal dere benytte teknikker som list comprehensions, iteratorer, pandas og pandas sql (sqldf) for å manipulere dataene effektivt, noe som vil bidra til å forberede dataene for videre analyse.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Hvilke metoder vil du bruke for å identifisere og håndtere manglende verdier i datasettet?\n",
+    "\n",
+    "Kan du gi et eksempel på hvordan du vil bruke list comprehensions for å manipulere dataene?\n",
+    "\n",
+    "Hvordan kan Pandas SQL (sqldf) forbedre datamanipuleringen sammenlignet med tradisjonelle Pandas-operasjoner?\n",
+    "\n",
+    "Hvilke spesifikke uregelmessigheter i dataene forventer du å møte, og hvordan planlegger du å håndtere dem?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "189b8beb",
+   "metadata": {},
+   "source": [
+    "Gå tilbake til [← innledningen](miljoanalyseprosjekt.ipynb) eller [del 2 →](del2.ipynb) av prosjektet"
    ]
   }
  ],
