--- a/proj_environment-main/notebooks/oppg1.ipynb
+++ b/proj_environment-main/notebooks/oppg1.ipynb
@@ -16,6 +16,13 @@
    "source": [
     "print(\"Utviklingsmiljøet er klart!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gå tilbake til [← del 1](del1.ipynb)"
+   ]
   }
  ],
  "metadata": {
