laste opp fil med falske feil

--- a/proj_environment-main/notebooks/del2.ipynb
+++ b/proj_environment-main/notebooks/del2.ipynb
@@ -7,6 +7,14 @@
    "source": [
     "Gå tilbake til [← innledningen](miljoanalyseprosjekt.ipynb) eller [← del 1](del1.ipynb) av prosjektet"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce256fa9",
+   "metadata": {},
+   "source": [
+    "test for å oppdatere data i git"
+   ]
   }
  ],
  "metadata": {
