små justeringer i variabler filen og gjort klar skriftdel i del2

--- a/proj_environment-main/notebooks/del2.ipynb
+++ b/proj_environment-main/notebooks/del2.ipynb
@@ -10,16 +10,202 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce256fa9",
+   "id": "238b351f",
    "metadata": {},
    "source": [
-    "test for å oppdatere data i git"
+    "#### Oppgaver: Oversikt\n",
+    "I mappe del 2 bygger vi videre på prosjektet gjennom følgende tilleggsoppgaver: Oppgave 4, benytte NumPy og Pandas for å analysere dataene og beregne statistiske mål som gjennomsnitt og standardavvik. I oppgave 5 skal vi lage informative visualiseringer av de analyserte dataene ved hjelp av Matplotlib, og eventuelt utforske interaktive visualiseringer. I oppgave 6 fokuserer dere på prediktiv analyse ved å implementere lineær regresjon for å forutsi fremtidige miljøforhold basert på historiske data. Til slutt, i oppgave 7 skal dere reflektere over læringsprosessen, erfaringer og vurderinger av prosjektet (maks 800 ord)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "850d3827",
+   "metadata": {},
+   "source": [
+    "#### Oppgave 4: Dataanalyse\n",
+    "I denne delen av prosjektet skal dere bruke verktøy som NumPy, Pandas, Matplotlib osv. til å beregne statistiske mål som gjennomsnitt, median og standardavvik, som er essensielle for å forstå datakvaliteten og identifisere trender. Videre vil dere implementere enkle statistiske analyser for å avdekke mønstre i dataene, noe som kan gi innsikt i miljøforholdene over tid. Denne analysen vil danne grunnlaget for videre visualisering og prediktiv analyse, og bidra til en dypere forståelse av de miljømessige faktorene som påvirker samfunnet.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Hvordan kan du bruke NumPy og Pandas til å beregne gjennomsnitt, median og standardavvik for de innsamlede dataene, og hvorfor er disse statistiske målene viktige?\n",
+    "\n",
+    "Kan du gi et eksempel på hvordan du vil implementere en enkel statistisk analyse for å undersøke sammenhengen mellom to variabler i datasettet?\n",
+    "\n",
+    "Hvordan planlegger du å håndtere eventuelle skjevheter i dataene under analysen, og hvilke metoder vil du bruke for å sikre at analysen er pålitelig?\n",
+    "\n",
+    "Hvilke visualiseringer vil du lage for å støtte analysen din, og hvordan vil disse visualiseringene hjelpe deg med å formidle funnene dine?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c485ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc2480c8",
+   "metadata": {},
+   "source": [
+    "#### Oppgave 5: Visualisering\n",
+    "Denne oppgaven fokuserer på bruken av Matplotlib og Seaborn for å skape informative og engasjerende visualiseringer av de analyserte miljødataene. I denne delen av prosjektet skal dere utvikle grafer og diagrammer som eksempelvis illustrerer endringer i luftkvalitet over tid, sammenligning av temperaturdata, og andre relevante trender. Målet er å gjøre dataene mer tilgjengelige og forståelige for et bredere publikum. I tillegg, dersom tiden tillater det, skal dere utforske muligheten for å lage interaktive visualiseringer ved hjelp av Widgets, Plotly eller Bokeh, noe som kan gi brukerne en mer dynamisk opplevelse av dataene.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Hvilke spesifikke typer visualiseringer planlegger du å lage for å representere eksempelvis endringer i luftkvalitet og temperaturdata, og hvorfor valgte du disse?\n",
+    "\n",
+    "Hvordan kan Matplotlib og Seaborn brukes til å forbedre forståelsen av de analyserte dataene, og hvilke funksjoner i disse bibliotekene vil være mest nyttige?\n",
+    "\n",
+    "Hvordan vil du håndtere og visualisere manglende data i grafene dine for å sikre at de fortsatt er informative?\n",
+    "\n",
+    "Kan du beskrive prosessen for å lage interaktive visualiseringer med Widgets, Plotly eller Bokeh, og hvilke fordeler dette kan gi i forhold til statiske visualiseringer?\n",
+    "\n",
+    "Hvordan vil du evaluere effektiviteten av visualiseringene dine i å formidle de viktigste funnene fra dataanalysen til et bredere publikum?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6161455",
+   "metadata": {},
+   "source": [
+    "#### Oppgave 6: Prediktiv analyse\n",
+    "Denne oppgaven handler om prediktiv analyse og fokuserer på implementeringen av lineær regresjon ved hjelp av scikit-learn for å forutsi fremtidige miljøforhold basert på historiske data. I denne delen av prosjektet skal dere forberede dataene ved å identifisere relevante funksjoner og målvariabler, samt håndtere eventuelle manglende verdier som kan påvirke modellens nøyaktighet. Deretter vil de trene regresjonsmodellen på de rensede dataene, evaluere dens ytelse ved hjelp av passende metoder som beregning av feilmål, og til slutt bruke modellen til å lage prediksjoner for fremtidige miljøforhold.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Lag minst tre forskjellige typer visualiseringer (f.eks. linjediagrammer, søylediagrammer og scatterplots) for å representere endringer i eksempelvis luftkvalitet og temperaturdata over tid. Forklar valget av visualiseringstype for hver graf.\n",
+    "\n",
+    "Implementer visualiseringer ved hjelp av Matplotlib og Seaborn. Inkluder tilpassede akser, titler, og fargepaletter for å forbedre lesbarheten og estetikk.\n",
+    "\n",
+    "Demonstrer hvordan manglende data håndteres i visualiseringene. Lag en graf som viser hvordan manglende verdier påvirker datatrender, og diskuter hvordan dette kan påvirke tolkningen av dataene.\n",
+    "\n",
+    "Skriv en kort evaluering av de utviklede visualiseringene. Diskuter hvilke visualiseringer som var mest effektive for å formidle informasjon, og hvorfor. Reflekter over tilbakemeldinger fra medstudenter eller veileder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fece3218",
+   "metadata": {},
+   "source": [
+    "#### Oppgave 7: Refleksjonsnotat\n",
+    "Skriv et refleksjonsnotat (maks 800 ord) etter gjennomføringen av prosjektet. Denne skal inneholde viktige punkter som gir innsikt i deres læringsprosess, erfaringer og vurderinger av prosjektet.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Refleksjoner over hva du har lært om datainnsamling, databehandling, dataanalyse og visualisering.\n",
+    "\n",
+    "Beskrivelse av nye ferdigheter som ble tilegnet, for eksempel bruk av spesifikke biblioteker (Pandas, NumPy, Matplotlib, etc.) og programmeringskonsepter.\n",
+    "\n",
+    "Identifisering av spesifikke utfordringer som oppstod under prosjektet, for eksempel problemer med datakvalitet, håndtering av manglende verdier, eller tekniske problemer med API-er.\n",
+    "\n",
+    "Refleksjoner over samarbeidet i gruppen, inkludert hvordan oppgaver ble fordelt og hvordan kommunikasjonen fungerte.\n",
+    "\n",
+    "Vurdering av de endelige resultatene, inkludert kvaliteten på visualiseringene og analysene.\n",
+    "\n",
+    "Ideer til hvordan prosjektet kan forbedres i fremtiden, både i forhold til tekniske aspekter og prosjektledelse.\n",
+    "\n",
+    "Mulige retninger for videre forskning eller utvikling basert på erfaringene fra prosjektet.\n",
+    "\n",
+    "Oppsummering av de viktigste læringspunktene og hvordan prosjektet har bidratt til studentenes forståelse av datavitenskap og miljøstudier.\n",
+    "\n",
+    "Personlige tanker om hvordan erfaringene fra prosjektet kan anvendes i fremtidige studier eller yrkesliv."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46b78ddd",
+   "metadata": {},
+   "source": [
+    "## vurderingskriterer slett!\n",
+    "\n",
+    "#### Oppgaver: Oversikt\n",
+    "I mappe del 2 bygger vi videre på prosjektet gjennom følgende tilleggsoppgaver: Oppgave 4 krever bruk av verktøy som NumPy og Pandas for å analysere dataene og beregne statistiske mål som gjennomsnitt og standardavvik. I oppgave 5 skal dere lage informative visualiseringer av de analyserte dataene ved hjelp av Matplotlib, og eventuelt utforske interaktive visualiseringer. I oppgave 6 fokuserer dere på prediktiv analyse ved å implementere lineær regresjon for å forutsi fremtidige miljøforhold basert på historiske data. Til slutt, i oppgave 7 skal dere reflektere over læringsprosessen, erfaringer og vurderinger av prosjektet (maks 800 ord).\n",
+    "\n",
+    "#### Oppgave 4: Dataanalyse\n",
+    "I denne delen av prosjektet skal dere bruke verktøy som NumPy, Pandas, Matplotlib osv. til å beregne statistiske mål som gjennomsnitt, median og standardavvik, som er essensielle for å forstå datakvaliteten og identifisere trender. Videre vil dere implementere enkle statistiske analyser for å avdekke mønstre i dataene, noe som kan gi innsikt i miljøforholdene over tid. Denne analysen vil danne grunnlaget for videre visualisering og prediktiv analyse, og bidra til en dypere forståelse av de miljømessige faktorene som påvirker samfunnet.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Hvordan kan du bruke NumPy og Pandas til å beregne gjennomsnitt, median og standardavvik for de innsamlede dataene, og hvorfor er disse statistiske målene viktige?\n",
+    "\n",
+    "Kan du gi et eksempel på hvordan du vil implementere en enkel statistisk analyse for å undersøke sammenhengen mellom to variabler i datasettet?\n",
+    "\n",
+    "Hvordan planlegger du å håndtere eventuelle skjevheter i dataene under analysen, og hvilke metoder vil du bruke for å sikre at analysen er pålitelig?\n",
+    "\n",
+    "Hvilke visualiseringer vil du lage for å støtte analysen din, og hvordan vil disse visualiseringene hjelpe deg med å formidle funnene dine?\n",
+    "\n",
+    "#### Oppgave 5: Visualisering\n",
+    "Denne oppgaven fokuserer på bruken av Matplotlib og Seaborn for å skape informative og engasjerende visualiseringer av de analyserte miljødataene. I denne delen av prosjektet skal dere utvikle grafer og diagrammer som eksempelvis illustrerer endringer i luftkvalitet over tid, sammenligning av temperaturdata, og andre relevante trender. Målet er å gjøre dataene mer tilgjengelige og forståelige for et bredere publikum. I tillegg, dersom tiden tillater det, skal dere utforske muligheten for å lage interaktive visualiseringer ved hjelp av Widgets, Plotly eller Bokeh, noe som kan gi brukerne en mer dynamisk opplevelse av dataene.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Hvilke spesifikke typer visualiseringer planlegger du å lage for å representere eksempelvis endringer i luftkvalitet og temperaturdata, og hvorfor valgte du disse?\n",
+    "\n",
+    "Hvordan kan Matplotlib og Seaborn brukes til å forbedre forståelsen av de analyserte dataene, og hvilke funksjoner i disse bibliotekene vil være mest nyttige?\n",
+    "\n",
+    "Hvordan vil du håndtere og visualisere manglende data i grafene dine for å sikre at de fortsatt er informative?\n",
+    "\n",
+    "Kan du beskrive prosessen for å lage interaktive visualiseringer med Widgets, Plotly eller Bokeh, og hvilke fordeler dette kan gi i forhold til statiske visualiseringer?\n",
+    "\n",
+    "Hvordan vil du evaluere effektiviteten av visualiseringene dine i å formidle de viktigste funnene fra dataanalysen til et bredere publikum?\n",
+    "\n",
+    "#### Oppgave 6: Prediktiv analyse\n",
+    "Denne oppgaven handler om prediktiv analyse og fokuserer på implementeringen av lineær regresjon ved hjelp av scikit-learn for å forutsi fremtidige miljøforhold basert på historiske data. I denne delen av prosjektet skal dere forberede dataene ved å identifisere relevante funksjoner og målvariabler, samt håndtere eventuelle manglende verdier som kan påvirke modellens nøyaktighet. Deretter vil de trene regresjonsmodellen på de rensede dataene, evaluere dens ytelse ved hjelp av passende metoder som beregning av feilmål, og til slutt bruke modellen til å lage prediksjoner for fremtidige miljøforhold.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Lag minst tre forskjellige typer visualiseringer (f.eks. linjediagrammer, søylediagrammer og scatterplots) for å representere endringer i eksempelvis luftkvalitet og temperaturdata over tid. Forklar valget av visualiseringstype for hver graf.\n",
+    "\n",
+    "Implementer visualiseringer ved hjelp av Matplotlib og Seaborn. Inkluder tilpassede akser, titler, og fargepaletter for å forbedre lesbarheten og estetikk.\n",
+    "\n",
+    "Demonstrer hvordan manglende data håndteres i visualiseringene. Lag en graf som viser hvordan manglende verdier påvirker datatrender, og diskuter hvordan dette kan påvirke tolkningen av dataene.\n",
+    "\n",
+    "Skriv en kort evaluering av de utviklede visualiseringene. Diskuter hvilke visualiseringer som var mest effektive for å formidle informasjon, og hvorfor. Reflekter over tilbakemeldinger fra medstudenter eller veileder.\n",
+    "\n",
+    "#### Oppgave 7: Refleksjonsnotat\n",
+    "Skriv et refleksjonsnotat (maks 800 ord) etter gjennomføringen av prosjektet. Denne skal inneholde viktige punkter som gir innsikt i deres læringsprosess, erfaringer og vurderinger av prosjektet.\n",
+    "\n",
+    "Vurderingskriterier:\n",
+    "\n",
+    "Refleksjoner over hva du har lært om datainnsamling, databehandling, dataanalyse og visualisering.\n",
+    "\n",
+    "Beskrivelse av nye ferdigheter som ble tilegnet, for eksempel bruk av spesifikke biblioteker (Pandas, NumPy, Matplotlib, etc.) og programmeringskonsepter.\n",
+    "\n",
+    "Identifisering av spesifikke utfordringer som oppstod under prosjektet, for eksempel problemer med datakvalitet, håndtering av manglende verdier, eller tekniske problemer med API-er.\n",
+    "\n",
+    "Refleksjoner over samarbeidet i gruppen, inkludert hvordan oppgaver ble fordelt og hvordan kommunikasjonen fungerte.\n",
+    "\n",
+    "Vurdering av de endelige resultatene, inkludert kvaliteten på visualiseringene og analysene.\n",
+    "\n",
+    "Ideer til hvordan prosjektet kan forbedres i fremtiden, både i forhold til tekniske aspekter og prosjektledelse.\n",
+    "\n",
+    "Mulige retninger for videre forskning eller utvikling basert på erfaringene fra prosjektet.\n",
+    "\n",
+    "Oppsummering av de viktigste læringspunktene og hvordan prosjektet har bidratt til studentenes forståelse av datavitenskap og miljøstudier.\n",
+    "\n",
+    "Personlige tanker om hvordan erfaringene fra prosjektet kan anvendes i fremtidige studier eller yrkesliv."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d63024a0",
+   "metadata": {},
+   "source": [
+    "Gå tilbake til [← innledningen](miljoanalyseprosjekt.ipynb) eller [← del 1](del1.ipynb) av prosjektet"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
